--- a/debian/control
+++ b/debian/control
@@ -7,12 +7,13 @@ Source: gsettings-desktop-schemas
 Section: gnome
 Priority: optional
 Maintainer: BlankOn Developers <BlankOn-dev@googlegroups.com>
+XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Josselin Mouette <joss@debian.org>, Michael Biebl <biebl@debian.org>, Sjoerd Simons <sjoerd@debian.org>
 Build-depends: debhelper (>= 8),
                cdbs,
                gnome-pkg-tools (>= 0.11),
                intltool (>= 0.40.0),
-               libglib2.0-dev (>= 2.31.0),
+               libglib2.0-dev (>= 2.40.0),
                gobject-introspection (>= 1.31.0),
                libgirepository1.0-dev (>= 1.31.0)
 Standards-Version: 3.9.4
