--- a/debian/control
+++ b/debian/control
@@ -6,17 +6,16 @@
 Source: gsettings-desktop-schemas
 Section: gnome
 Priority: optional
-Maintainer: BlankOn Developers <BlankOn-dev@googlegroups.com>
-XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
+Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Josselin Mouette <joss@debian.org>, Michael Biebl <biebl@debian.org>, Sjoerd Simons <sjoerd@debian.org>
 Build-depends: debhelper (>= 8),
                cdbs,
                gnome-pkg-tools (>= 0.11),
                intltool (>= 0.40.0),
-               libglib2.0-dev (>= 2.40.0),
+               libglib2.0-dev (>= 2.31.0),
                gobject-introspection (>= 1.31.0),
                libgirepository1.0-dev (>= 1.31.0)
-Standards-Version: 3.9.4
+Standards-Version: 3.9.5
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gsettings-desktop-schemas/
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gsettings-desktop-schemas/
 Homepage: http://www.gnome.org/
@@ -30,7 +29,7 @@ Depends: ${misc:Depends},
 Breaks: gnome-shell (<< 3.10.0),
         gnome-settings-daemon (<< 3.10.0),
         nautilus (<< 3.7.92)
-Description: GSettings deskop-wide schemas
+Description: GSettings desktop-wide schemas
  gsettings-desktop-schemas contains a collection of GSettings schemas for
  settings shared by various components of a desktop.
 
