--- a/debian/control.in
+++ b/debian/control.in
@@ -4,15 +4,15 @@ Priority: optional
 Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
 XSBC-Original-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-depends: cdbs, debhelper (>= 10),
+Build-depends: debhelper (>= 11),
                gnome-pkg-tools (>= 0.11),
                intltool (>= 0.40.0),
                libglib2.0-dev (>= 2.31.0),
                gobject-introspection (>= 1.31.0),
                libgirepository1.0-dev (>= 1.31.0)
-Standards-Version: 4.1.0
-Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/gsettings-desktop-schemas/
-Vcs-Browser: https://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gsettings-desktop-schemas/
+Standards-Version: 4.1.2
+Vcs-Git: https://anonscm.debian.org/git/pkg-gnome/gsettings-desktop-schemas.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-gnome/gsettings-desktop-schemas.git
 Homepage: http://www.gnome.org/
 
 Package: gsettings-desktop-schemas
@@ -32,7 +32,7 @@ Description: GSettings desktop-wide schemas
 Package: gsettings-desktop-schemas-dev
 Section: libdevel
 Architecture: any
-Depends: gsettings-desktop-schemas (= ${source:Version}),
+Depends: gsettings-desktop-schemas (>= ${source:Version}),
          gir1.2-gdesktopenums-3.0 (= ${binary:Version}),
          ${misc:Depends}
 Multi-arch: same
