--- a/debian/control.in
+++ b/debian/control.in
@@ -11,8 +11,8 @@ Build-depends: debhelper (>= 11),
                gobject-introspection (>= 1.31.0),
                libgirepository1.0-dev (>= 1.31.0)
 Standards-Version: 4.1.2
-Vcs-Git: https://anonscm.debian.org/git/pkg-gnome/gsettings-desktop-schemas.git
-Vcs-Browser: https://anonscm.debian.org/git/pkg-gnome/gsettings-desktop-schemas.git
+Vcs-Browser: https://salsa.debian.org/gnome-team/gsettings-desktop-schemas
+Vcs-Git: https://salsa.debian.org/gnome-team/gsettings-desktop-schemas.git
 Homepage: http://www.gnome.org/
 
 Package: gsettings-desktop-schemas
